<resources>
    <string name="app_name">Fiuber</string>
    <string name="saved_data">persistantFile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="facebook_app_id">166189857290429</string>
    <string name="fb_login_protocol_scheme">fb166189857290429</string>
    <string name="title_activity_login">Log in</string>
    <string name="profile">Profile</string>
    <string name="payment">Payment</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="description_menu_search_bar">Menu button on Floating Search Bar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in_short">Log in</string>
    <string name="action_register">Register</string>
    <string name="action_text_register">Don\'t have an account? Register here</string>
    <string name="action_text_login">Already registered? Log In here</string>
    <string name="action_login">Log in</string>
    text_register
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="action_search">Search</string>
    action_search

    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="clear_text">Clear Text</string>

    <!-- getString(String, Object...) does not support HTML tags directly, they need to be encoded first.
    Original string: <b>%1$s</b><br/><i>Place Id: %2$s</i><br/>Address: %3$s<br/>Phone: %4$s<br/>Website: %5$s-->
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_payment">Payment</string>
    <string name="title_activity_history">History</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_save">Save</string>
    <string name="prompt_username">Username</string>
    <string name="action_text_change_to_driver">Do you want to register as a Driver? Click here!</string>
    <string name="action_text_change_to_passenger">Don\'t want to register as a Driver? Click Here!</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_request_ride">Request Ride</string>
    <string name="action_pay_ride">Pay</string>
    <string name="action_view_profile">View Profile</string>
    <string name="action_chat">Chat</string>
    <string name="prompt_car_model">Model</string>
    <string name="prompt_car_color">Color</string>
    <string name="prompt_car_brand">Brand</string>
    <string name="prompt_car_year">Year</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_accept_ride">Accept Ride</string>

    <string name="client_id">3dcd05f5-8767-453e-a605-96bfb8c03995</string>
    <string name="client_secret">43fac65f-4450-48ce-8260-8ba4e52c88f7</string>
    <string name="valid">Valid</string>
    <string name="invalid">Invalid</string>
    <string name="title_activity_add_payment">Add Payment Method</string>
    <string name="action_start_trip">Start Trip</string>
    <string name="action_finish_trip">Finish Trip</string>

</resources>
