<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fiuber.fiuber.passenger.PassengerMapsActivity">

    <include
        android:id="@+id/include"
        layout="@layout/content_passenger_map" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="147dp"
        android:layout_below="@id/fab"
        android:background="@android:color/white"
        android:clipToPadding="true"
        android:elevation="6dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <LinearLayout
            android:id="@+id/linear_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/rl_text_waiting_for_passenger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="start"
                android:padding="@dimen/margin_small"
                android:visibility="gone">


                <TextView
                    android:id="@+id/text_waiting_for_passenger"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Waiting for passenger ..."
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_text_passenger_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="start"
                android:padding="@dimen/margin_small"
                android:visibility="gone">


                <TextView
                    android:id="@+id/text_passenger_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Name Surname"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_view_profile"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/action_view_profile"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/button_chat"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/action_chat"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/button_start_trip"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/action_start_trip"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/button_finish_trip"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/action_finish_trip"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/button_cancel"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/action_cancel"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/primary_wrap"
        android:layout_width="wrap_content"
        android:layout_height="88dp"
        android:elevation="12dp"
        app:layout_anchor="@id/bottom_sheet"
        app:layout_anchorGravity="top|end">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_my_location" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
